--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "icaro cardoso rios",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "morgan": "^1.9.1"
   },
